- Bumped version to v0.1.5.13 - It has been tested that newer Java versions have more optimized JVMs and can run Minecraft with lower MSPT. Thus I changed a few reflection based APIs to adapt