@@ -3,6 +3,11 @@ package carpet.utils;
 import java.lang.invoke.MethodHandle;
 import java.lang.invoke.MethodHandles;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
+import java.lang.reflect.Method;
+import java.util.Arrays;
+import java.util.Iterator;
+import java.util.Set;
 
 public final class JavaVersionUtil {
     public static final int JAVA_VERSION = getJavaVersion();
@@ -39,11 +44,18 @@ public final class JavaVersionUtil {
             throw new RuntimeException("objectFieldAccessor does not work for primitive field types");
         }
 
+        if (JAVA_VERSION >= 17) {
+            crackReflectionAccess();
+        }
         try {
             field.setAccessible(true);
         } catch (RuntimeException e) { // InaccessibleObjectException
-            if (JAVA_VERSION <= 8) {
-                throw e;
+            if (JAVA_VERSION <= 8 || JAVA_VERSION >= 17) {
+                // For Java <= 8 we have natural unrestricted reflection
+                // For Java > 17 we have cracked reflective access
+                throw new AssertionError(e);
+            } else {
+                throw new RuntimeException("!!! You should add JVM args --illegal-access=permit", e);
             }
             /*
             long fieldOffset = UnsafeFieldAccessor.unsafe.objectFieldOffset(field);
@@ -118,4 +130,61 @@ public final class JavaVersionUtil {
         }
     }
      */
+
+    private static void crackReflectionAccess() {
+        Object classLoader = JavaVersionUtil.class.getClassLoader();
+        Object unnamedModule = invokeQuietly(classLoader, "getUnnamedModule");
+        Method method;
+        try {
+            method = unnamedModule.getClass().getDeclaredMethod( "implAddExportsOrOpens", String.class,
+                    unnamedModule.getClass(), boolean.class, boolean.class );
+        } catch (NoSuchMethodException e) {
+            throw new RuntimeException(e);
+        }
+        method.setAccessible(true);
+        Object moduleLayerBoot = invokeStaticQuietly(classForName("java.lang.ModuleLayer"), "boot");
+        ((Iterable<?>) invokeQuietly(moduleLayerBoot, "modules")).forEach(module -> {
+            try {
+                Set<String> packages = (Set<String>) invokeQuietly(module, "getPackages");
+                for(String eachPackage : packages) {
+                    method.invoke( module, eachPackage, unnamedModule, true, true );
+                }
+            } catch (InvocationTargetException e) {
+                throw new RuntimeException( e );
+            } catch (IllegalAccessException e) {
+                System.err.println("!!! PLEASE ADD JVM ARGS --add-opens java.base/java.lang=ALL-UNNAMED");
+                throw new RuntimeException(e);
+            }
+        } );
+    }
+    
+    private static Object invokeQuietly(Object instance, String methodName, Object... params) {
+        try {
+            Method method = Arrays.stream(instance.getClass().getMethods()).filter(
+                    m -> methodName.equals(m.getName()) && m.getParameterCount() == params.length)
+                    .findFirst().orElseThrow(IllegalArgumentException::new);
+            return method.invoke(instance, params);
+        } catch (IllegalAccessException | InvocationTargetException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private static Object invokeStaticQuietly(Class<?> clazz, String methodName, Object... params) {
+        try {
+            Method method = Arrays.stream(clazz.getMethods()).filter(
+                    m -> methodName.equals(m.getName()) && m.getParameterCount() == params.length)
+                    .findFirst().orElseThrow(IllegalArgumentException::new);
+            return method.invoke(null, params);
+        } catch (IllegalAccessException | InvocationTargetException e) {
+            throw new RuntimeException(e);
+        }
+    }
+
+    private static Class<?> classForName(String className) {
+        try {
+            return Class.forName(className);
+        } catch (ClassNotFoundException e) {
+            throw new RuntimeException(e);
+        }
+    }
 }
